--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -31,12 +31,11 @@ RUN ls /service
 RUN ls /service/workflows
 RUN ls /service/taskRunner
 
-RUN go build -o /service/main_test main_test.go
+RUN go build -o /service/main /service/test/main.go
 
 RUN mkdir -p workflows
-
 
 RUN apt-get -y install python3-pip
 RUN pip install -r /service/taskRunner/requirements.txt
 
-ENTRYPOINT [ "/service/main_test" ]
+ENTRYPOINT [ "/service/main" ]
