--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,8 +7,20 @@ on:
     branches: [ "main" ]
     
 jobs:
+  read-tag:
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.read-tag.outputs.tag }}
+    steps:
+      - name: Read tag
+        id: read-tag
+        shell: bash  # Needed so that variable expansion operators work properly:
+        run: |
+          echo "::set-output name=tag::${GITHUB_REF:10}"  # Export just the tag name, e.g. "0.0.1" instead of "refs/tags/0.0.1" as a step output
+
   build:
     runs-on: ubuntu-latest
+    needs: [read-tag]
     steps:
     - uses: actions/checkout@v4
     - name: Login to Docker Hub
@@ -23,4 +35,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: pennsieve/workflow-manager:latest
+        tags: pennsieve/workflow-manager:${{needs.read-tag.outputs.tag}}, pennsieve/workflow-manager:latest
