--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -30,17 +30,16 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
 RUN unzip awscliv2.zip
 RUN ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/aws-cli --update
 
-COPY . .
-
-RUN ls /service
-RUN ls /service/workflows
-RUN ls /service/taskRunner
-
-RUN go build -o /service/main /service/test/main.go
+RUN apt-get -y install python3-pip
 
 RUN mkdir -p workflows
 
-RUN apt-get -y install python3-pip
+COPY taskRunner/requirements.txt /service/taskRunner/requirements.txt
+
 RUN pip install -r /service/taskRunner/requirements.txt
+
+COPY . .
+
+RUN go build -o /service/main /service/test/main.go
 
 ENTRYPOINT [ "/service/main" ]
