temporarily disable tagging new release build with latest tag

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,4 +33,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: pennsieve/workflow-manager:${{needs.read-tag.outputs.TAG}}, pennsieve/workflow-manager:latest
+        tags: pennsieve/workflow-manager:${{needs.read-tag.outputs.TAG}} #, pennsieve/workflow-manager:latest
