update sample environment

--- a/dev.env.sample
+++ b/dev.env.sample
@@ -2,5 +2,5 @@ INTEGRATION_ID=<replace-me>
 PENNSIEVE_API_KEY=<replace-me>
 PENNSIEVE_API_SECRET=<replace-me>
 BASE_DIR=/mnt/efs
-ENVIRONMENT=LOCAL
+ENVIRONMENT=local
 REGION=us-east-1
