--- a/dev.env.sample
+++ b/dev.env.sample
@@ -1,6 +1,6 @@
 INTEGRATION_ID=<replace-me>
 PENNSIEVE_API_KEY=<replace-me>
 PENNSIEVE_API_SECRET=<replace-me>
-BASE_DIR=/mnt/efs
+BASE_DIR=/service/workflows
 ENVIRONMENT=local
 REGION=us-east-1
