updates for refresh token

--- a/dev.env.sample
+++ b/dev.env.sample
@@ -4,3 +4,4 @@ PENNSIEVE_API_SECRET=<replace-me>
 BASE_DIR=/service/workflows
 ENVIRONMENT=local
 REGION=us-east-1
+DEVICE_KEY=<optional-extract-from-session-token>
