--- a/dev.env.sample
+++ b/dev.env.sample
@@ -5,3 +5,5 @@ BASE_DIR=/service/workflows
 ENVIRONMENT=local
 REGION=us-east-1
 DEVICE_KEY=<optional-extract-from-session-token>
+SESSION_TOKEN=session-token
+REFRESH_TOKEN=refresh-token
